--- a/LL240102/index.html
+++ b/LL240102/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<script>
 		setTimeout(function () {
-		window.location.href = "http://www.example.com";
+		window.location.href = "https://weixin.qq.com/";
 		}, 100);
 		</script>
 	</body>
